2016/12/10 v157
	1. Fix the auto quest select item.

2016/12/10 v156
	1. Fix the auto finish quest without select.

2016/12/10 v155
	1. Re-fix the auto-gen flyout spell's visibility.

2016/12/09 v154
	1. ChatFrame'll show the tips when mouse is over links.
	2. Auto sell, auto repair, auto split and stack added for container.
	3. Auto quest added for quest mover.
	4. Fix the auto-gen flyout spell.

2016/11/30 v153
	1. Fix the auto fade of the minimap.

2016/11/30 v152
	1. Fix the autofade bar with show grid options.

2016/11/29 v151
	1. Fix flyout spell's generation.
	2. The auto hide/fade bar will be shown when pick up a spell, and will be hide/fade correctly after place or cancel it.
	3. Fix style for temp chatframe.
	4. Fix micro menu's position after the pet combat.

2016/11/28 v150
	1. Right-click the minimap's zone text to toggle the auto fade option.
	2. Right-click the quest log's header to toggle the auto fade option.

2016/11/28 v149
	1. Fix chat frame tab's broken.

2016/11/28 v148
	1. Auto fade option added to quest list.
	2. Chat Frame use a more clear style.

2016/11/27 v147
	1. Fix the micro menu not shown when get out of the vehicle.
	2. Auto fade option added to minimap.

2016/11/27 v146
	1. Fix the auto fade bar won't fade when lock the action bar.

2016/11/26 v145
	1. The micro menu buttons can be moved to anywhere, and auto hide, auto fade can be used on it.
	2. The extra bar can be moved, unlock it in the manager frame.

2016/11/26 v144
	1. Fix swap action for flyout spells.

2016/11/26 v143
	1. Reduce memory increasment.

2016/11/26 v142
	1. The auto-hide system can works with the auto fade, it the bar use them both, then the macro condition will be used to check if the bar need to be auto fade, it'll not be auto-hide.
	2. Add several macro unit id to the macro condition maker.

2016/11/26 v141
	1. Fix the fade out effect.
	2. The action bar's bag bar can be auto fade out.

2016/11/26 v140
	1. Fix several bugs.