@@ -1,3 +1,6 @@
+2016/12/10 v158
+	1. Fix the container view syste's manager for english version.
+
 2016/12/10 v157
 	1. Fix the auto quest select item.
 
